--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Close to the Metal
 author: Sandhya Chandramohan
-email: sandhya2392@gmail.com
+email: s4ndhyac@gmail.com
 url: https://blog.sandhya.dev
 description: > # this means to ignore newlines until "show_excerpts:"
   Distributed Systems, Hardware hacking and growth
@@ -11,20 +11,20 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # Moving date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
-  avatar_url: "https://i.loli.net/2019/08/26/JzCLhDWPEybZr2T.jpg" # avatar in about page
+  avatar_url: "https://secure.gravatar.com/avatar/898896292c00189f5ec1a689409de2e2?s=120" # avatar in about page
   about_you: a short description about you. # short description about you in about page
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
   # generate social links in about page.
   social_links:
-    # twitter: 
+    twitter: s4ndhya
     github:  s4ndhyac
     rss: RSS
     # dribbble: 
     facebook: sandhya.chandramohan
     # flickr:   
-    # instagram: 
+    instagram: sandhya.chandramohan 
     linkedin: sandhyachandramohan
     # pinterest: 
     # youtube: 
