--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ moving:
     # dribbble: 
     facebook: sandhya.chandramohan
     # flickr:   
-    instagram: sandhya.chandramohan 
+    # instagram: sandhya.chandramohan 
     linkedin: sandhyachandramohan
     # pinterest: 
     # youtube: 
